# LCL

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE-CODE  LICENSE-CONTENT  README.md  pyproject.toml  requirements.txt
Shell_and_Scripting_Utilities/: check.py
app/: __init__.py  admin.py  app.py  config.py  markdown_export.py  markdown_import.py  models.py  paths.py  pins.py  search.py  suggestions.py  validation.py  yamlio.py
app/screens/: about.py  help.py  menu.py  new_command.py  suggest.py
app/tui/: app.py
app/widgets/: items.py
data/commands/: backslash.yml  bang.yml  dollar.yml  dot.yml
data/commands/Archive_Compression_Mgmt/: bzip2.yml  gunzip.yml  gzip.yml  tar.yml  unp.yml  unzip.yml  xz.yml  zip.yml
data/commands/File_Directory_Mgmt/: cd.yml  cp.yml  echo.yml  exa.yml  fd.yml  find.yml  fzf.yml  locate.yml  ls.yml  mkdir.yml  mv.yml  pwd.yml  ranger.yml  ripgrep.yml  rm.yml  rmdir.yml  shred.yml  touch.yml  tree.yml  vidir.yml  zoxide.yml
data/commands/File_and_Directory_Management/: cd.yml  cp.yml  echo.yml  exa.yml  fd.yml  find.yml  fzf.yml  locate.yml  ls.yml  mkdir.yml  mv.yml  pwd.yml  ranger.yml  ripgrep.yml  rm.yml  rmdir.yml  rsync.yml  shred.yml  touch.yml  tree.yml  vidir.yml  zoxide.yml
data/commands/Linux_Directory_System/: bin.yml  boot.yml  dev.yml  etc.yml  home.yml  lib.yml  opt.yml  proc.yml  root.yml  sbin.yml  tmp.yml  usr.yml  var.yml
data/commands/Networking_Tools/: asciinema.yml  curl.yml  dog.yml  ftp.yml  ifconfig.yml  ip.yml  ipcalc.yml  lazydocker.yml  lsof.yml  mosh.yml  mtr.yml  netstat.yml  ping.yml  rsync.yml  scp.yml  ss.yml  ssh.yml  systemd-analyze.yml  taskwarrior.yml  termshark.yml  ts.yml  wget.yml  wormhole.yml
data/commands/Package_Management/: apt.yml  dnf.yml  dpkg.yml  flatpak.yml  rpm.yml  snap.yml  yum.yml
templates/: new_command_20251018_194449.yml.save
tui/: app.py  lcl.spec
tui/.exports/: ls.md
(+120 files in other folders)
