[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-command-library"
version = "0.3.0"
description = "Interactive Linux Command Library TUI"
readme = "README.md"
requires-python = ">=3.10"

# PEP 621 wants a list of author tables
authors = [{ name = "ShadoVaine", email = "shado.sec@proton.me" }]

# Pin Textual a bit to match your older API (no show_key_bindings kwarg)
dependencies = [
  "textual>=0.35,<0.50",
  "rapidfuzz>=3.0.0",
  "watchdog>=3.0.0"
]

# This creates the 'lcl' command that calls app/app.py:main()
[project.scripts]
lcl = "app.app:main"

# Let setuptools discover packages under the project root
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# Include your non-Python assets if you ship them (adjust paths as needed)
[tool.setuptools.package-data]
"app" = [
  "data/commands/**/*.yml",
  "templates/**/*.yml",
  ".exports/*.md"
]
