[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-command-library"
version = "0.3.0"
description = "Interactive Linux Command Library TUI"
readme = "README.md"
requires-python = ">=3.10"

# PEP 621 wants a list of author tables
authors = [{ name = "ShadoVaine", email = "shado.sec@proton.me" }]

# Correct dependencies for your app
dependencies = [
  "textual>=0.69.0",
  "pyyaml>=6.0.0"
]

# This creates the 'lcl' command that calls app/app.py:main()
[project.scripts]
lcl = "app.app:main"

# Let setuptools discover packages under the project root
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# Include data files
[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = [
  "data/**/*.yml",
  "data/**/*.yaml"
]
